--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==1.4.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 altair==4.2.2
+asgiref==3.6.0
 asttokens==2.2.1
 astunparse==1.6.3
 async-timeout==4.0.2
@@ -18,6 +19,7 @@ comm==0.1.2
 dataclasses-json==0.5.7
 debugpy==1.6.4
 decorator==5.1.1
+Django==4.2.1
 docopt==0.6.2
 elementpath==3.0.2
 entrypoints==0.4
@@ -25,6 +27,9 @@ et-xmlfile==1.1.0
 executing==1.2.0
 falcon==3.1.0
 Flask==2.2.3
+Flask-JWT-Extended==4.4.4
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.3
 flatbuffers==23.3.3
 frozenlist==1.3.3
 gast==0.4.0
@@ -93,6 +98,7 @@ pyasn1-modules==0.3.0
 pydantic==1.10.7
 pydeck==0.8.1b0
 Pygments==2.13.0
+PyJWT==2.6.0
 Pympler==1.0.1
 pyoxigraph==0.3.6
 pyparsing==3.0.9
@@ -112,6 +118,7 @@ rich==13.3.4
 rsa==4.9
 scipy==1.10.1
 sentencepiece==0.1.98
+silence-tensorflow==1.2.1
 six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
@@ -120,6 +127,7 @@ SQLAlchemy==1.4.42
 sqlparse==0.4.3
 stack-data==0.6.2
 streamlit==1.21.0
+support-developer==1.0.5
 tenacity==8.2.2
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
