--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ google-pasta==0.2.0
 gptcache==0.1.14
 greenlet==1.1.3.post0
 grpcio==1.54.0
+gunicorn==20.1.0
 h5py==3.8.0
 idna==3.4
 importlib-metadata==6.5.0
@@ -107,7 +108,7 @@ pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2022.5
 pytz-deprecation-shim==0.1.0.post0
-#pywin32==305
+pywin32==305
 PyYAML==6.0
 pyzmq==24.0.1
 rdflib==6.2.0
@@ -134,8 +135,8 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.10.1
 tensorflow-estimator==2.10.0
-tensorflow-hub #==0.13.0
-tensorflow-intel #==2.12.0
+tensorflow-hub==0.13.0
+tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 tensorflow-text==2.10.0
 termcolor==2.2.0
@@ -152,6 +153,7 @@ tzdata==2023.3
 tzlocal==4.3
 urllib3==1.26.15
 validators==0.20.0
+waitress==2.1.2
 watchdog==3.0.0
 wcwidth==0.2.5
 Werkzeug==2.2.3
